Fixed code snippet overflow

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ header h1 { display: inline; }
 footer { font-size: 0.8em; text-align: right; line-height: 1.5em; margin-top: 1.5em; padding-top: 0.5em; border-top: 1px dashed #999; }
 nav { display:inline; }
 hr { border: 0; border-top: 1px dashed #999; margin-bottom: 1.5em; }
-pre code { display: block; line-height: 1.2em; border: 1px solid #eee; border-radius: 0.5em; padding: 0.5em 0.5em 0.5em 0.5em; width: 97%; }
+pre code { display:block; overflow: scroll; line-height: 1.2em; border: 1px solid #eee; border-radius: 0.5em; padding: 0.5em 0.5em 0.5em 0.5em; width: 97%; }
 code { background-color: #fff; border: 1px solid #eee; border-radius: 0.25em; padding: 0.3em 0.2em 0 0.2em; }
-code a { color:black; }
+code a { color:black; text-overflow:;}
 figure { width: 100%; text-align: center; margin: 0;}
 figcaption { font-style: italic; }
 img { max-width: 100%; margin-left: auto; margin-right: auto; }
